--- a/standard-library/pom.xml
+++ b/standard-library/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.grube</groupId>
-    <artifactId>tryouts</artifactId>
+    <artifactId>standard-library</artifactId>
     <version>1.0</version>
 
     <properties>
