added aws secret checker tryout

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>coding-challenges</module>
         <module>standard-library</module>
+        <module>aws</module>
     </modules>
 
     <build>
