added dotenv tryout

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>coding-challenges</module>
         <module>standard-library</module>
         <module>aws</module>
+        <module>dotenv-example</module>
     </modules>
 
     <build>
