added spring login app using jwt and react

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>gson</module>
         <module>jackson</module>
         <module>Optional</module>
+        <module>spring</module>
     </modules>
 
     <build>
