added postgres support, implemented UserDetailsService

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -14,5 +14,6 @@
         <module>simpleRestControllerTryouts</module>
         <module>crud-spring-react</module>
         <module>registration-login-jwt-react</module>
+        <module>UserDetailsTryout</module>
     </modules>
 </project>
